// DBML (Database Markup Language) untuk dbdiagram.io
// Salin seluruh kode ini dan tempel di editor https://dbdiagram.io

Table organisations {
  id bigint [primary key, increment]
  name varchar(150)
  address text [null]
  last_grade_reset_at timestamp [null]
  description text [null]
  has_division boolean [default: false]
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table divisions {
  id bigint [primary key, increment]
  organisation_id bigint [ref: > organisations.id, note: "Cascade on delete"]
  name varchar(150)
  description text [null]
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table users {
  id bigint [primary key, increment]
  organisation_id bigint [null, ref: > organisations.id, note: "Null on delete"]
  division_id bigint [null, ref: > divisions.id, note: "Null on delete"]
  name varchar(255)
  email varchar(255) [unique]
  email_verified_at timestamp [null]
  password varchar(255)
  phone varchar(30) [null]
  role varchar(30) [default: 'member', note: "pembina, pengurus, member"]
  is_active boolean [default: true]
  remember_token varchar(100) [null]
  created_at timestamp [null]
  updated_at timestamp [null]

  Indexes {
    (organisation_id, division_id, role) [name: "users_org_div_role_idx"]
  }
}

Table password_reset_tokens {
  email varchar(255) [primary key]
  token varchar(255)
  created_at timestamp [null]
}

Table sessions {
  id varchar(255) [primary key]
  user_id bigint [null, ref: > users.id, note: "Index, Null on delete"]
  ip_address varchar(45) [null]
  user_agent text [null]
  payload longtext
  last_activity integer [note: "Index"]

  Indexes {
    user_id [name: "sessions_user_id_index"]
    last_activity [name: "sessions_last_activity_index"]
  }
}

Table attendance_sessions {
  id bigint [primary key, increment]
  organisation_id bigint [null, ref: > organisations.id, note: "Null on delete"]
  division_id bigint [null, ref: > divisions.id, note: "Null on delete"]
  title varchar(200) [null]
  qr_token varchar(255) [unique]
  session_date date
  start_time time [null]
  end_time time [null]
  latitude decimal(10,7) [null]
  longitude decimal(10,7) [null]
  radius integer [null]
  is_active boolean [default: false]
  created_by bigint [ref: > users.id, note: "Cascade on delete"]
  created_at timestamp [null]
  updated_at timestamp [null]

  Indexes {
    (organisation_id, division_id, session_date) [name: "att_sess_org_div_date_idx"]
    is_active [name: "att_sess_active_idx"]
  }
}

Table attendances {
  id bigint [primary key, increment]
  user_id bigint [ref: > users.id, note: "Cascade on delete"]
  session_id bigint [ref: > attendance_sessions.id, note: "Cascade on delete"]
  checkin_time timestamp [null]
  latitude decimal(10,7) [null]
  longitude decimal(10,7) [null]
  distance integer [null]
  status varchar(30) [null, note: "hadir, telat, alpha, ditolak"]
  created_at timestamp [null]
  updated_at timestamp [null]

  Indexes {
    (session_id, user_id, status) [name: "att_session_user_status_idx"]
  }
}

Table attendance_logs {
  id bigint [primary key, increment]
  user_id bigint [null, ref: > users.id, note: "Null on delete"]
  qr_token varchar(255)
  latitude decimal(10,7) [null]
  longitude decimal(10,7) [null]
  result text [null]
  created_at timestamp [null]
  updated_at timestamp [null]

  Indexes {
    (user_id, qr_token) [name: "att_logs_user_qr_idx"]
  }
}

Table audit_logs {
  id bigint [primary key, increment]
  user_id bigint [null, ref: > users.id, note: "Set null on delete"]
  event varchar(255) [note: "created, updated, deleted, login, logout"]
  auditable_type varchar(255) [null]
  auditable_id bigint [null]
  old_values json [null]
  new_values json [null]
  ip_address varchar(255) [null]
  user_agent text [null]
  created_at timestamp [null]
  updated_at timestamp [null]
}

// Tabel-Tabel Sistem Laravel (Optional)
Table cache {
  key varchar(255) [primary key]
  value mediumtext
  expiration bigint [note: "Index"]

  Indexes {
    expiration [name: "cache_expiration_index"]
  }
}

Table cache_locks {
  key varchar(255) [primary key]
  owner varchar(255)
  expiration bigint [note: "Index"]

  Indexes {
    expiration [name: "cache_locks_expiration_index"]
  }
}

Table jobs {
  id bigint [primary key, increment]
  queue varchar(255) [note: "Index"]
  payload longtext
  attempts tinyint
  reserved_at integer [null]
  available_at integer
  created_at integer

  Indexes {
    queue [name: "jobs_queue_index"]
  }
}

Table job_batches {
  id varchar(255) [primary key]
  name varchar(255)
  total_jobs integer
  pending_jobs integer
  failed_jobs integer
  failed_job_ids longtext
  options mediumtext [null]
  cancelled_at integer [null]
  created_at integer
  finished_at integer [null]
}

Table failed_jobs {
  id bigint [primary key, increment]
  uuid varchar(255) [unique]
  connection text
  queue text
  payload longtext
  exception longtext
  failed_at timestamp [default: `now()`]
}
